# core

./: .cursorrules  .gitignore  .mcp.json  .tool-versions  AGENTS.md  README.md  Taskfile.yaml  aqua.yaml  buildspec.yml  lefthook.yml  pyproject.toml  requirements.txt  windsor.yaml
.github/: release-drafter.yml  renovate.json  support-bundle.yaml
.github/scripts/: collect-talos-diagnostics.sh
.github/workflows/: blueprint-checkov.yaml  blueprint-checks.yaml  blueprint-ci.yaml  checkov.yaml  ci.yaml  claude-code-review.yaml  enforce-pr-labels.yaml  release-drafter.yaml  terraform-docs.yml  windsor-up.yaml
charts/mayastor-diskpool-provisioner/: Chart.yaml  README.md  values.yaml
contexts/: .gitignore
contexts/_template/: blueprint.jsonnet  blueprint.yaml  metadata.yaml  schema.yaml
contexts/aws/: blueprint.yaml
contexts/aws-example/: blueprint.yaml
contexts/azure-example/: blueprint.yaml
contexts/colima/: blueprint.yaml
contexts/default/: blueprint.yaml
contexts/docker-desktop/: blueprint.yaml
contexts/local/: Corefile  blueprint.quickwit-local.yaml  blueprint.yaml  (+2 more)
contexts/local-colima/: blueprint.yaml
contexts/local-docker-desktop/: blueprint.quickwit-local.yaml  blueprint.yaml
docker/: Dockerfile
docs/: aws-windsor-2.0-roadmap.md  deps-review.md  destroy-routine.md  index.md  nav.yaml
kustomize/: GUIDELINES.md  README.md  kustomization.yaml  pod.yaml
scripts/: kustomize-docs.sh  lint-dashboards.sh  sync-kustomize-reference.mjs  sync-reference.mjs  vendor-crds.sh  vendor-dashboards.sh
terraform/: .terraform-docs.yml  README.md
(+1059 files in other folders)
