[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "windsorcli_github_io"
version = "0.1.0"
description = "Deploys windsor cli documentation to gh-pages"
authors = ["@rmvangun and @tvangundy"]
license = "MIT"
package-mode = false 

[tool.poetry.dependencies]
python = "^3.12.3"
localstack = "3.8.1"
packaging = "24.1"
requests = "2.32.3"
netaddr = "1.3.0"
ansible = "10.6.0"
pytest = "8.3.3"
terraform-local = "0.20.0"
mkdocs = "1.6.1"
mkdocs-get-deps = "0.2.0"
mkdocs-macros-plugin = "1.3.7"
mkdocs-material = "9.5.49"
mkdocs-material-extensions = "1.3.1"
mike = "2.1.3"

# Optional: Add any dev dependencies here
[tool.poetry.dev-dependencies]
# e.g., pytest = "^6.2"
